--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 	},
 	"dependencies": {
 		"@heroicons/react": "^2.2.0",
+		"@supabase/ssr": "^0.6.1",
+		"@supabase/supabase-js": "^2.50.0",
 		"framer-motion": "^12.18.1",
 		"lucide-react": "^0.515.0",
 		"next": "15.3.3",
