--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"next": "15.3.3",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-medium-image-zoom": "^5.2.14",
 		"react-responsive": "^10.0.1"
 	},
 	"devDependencies": {
