--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-medium-image-zoom": "^5.2.14",
-		"react-responsive": "^10.0.1"
+		"react-responsive": "^10.0.1",
+		"swiper": "^11.2.10"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
